--- a/iFrameTest/salesforceApp.html
+++ b/iFrameTest/salesforceApp.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-<video width="auto" height="403" autoplay loop preload="auto">
+<video width="100%" height="100%" autoplay loop preload="auto">
   <source src="./salesforceApp.mp4" type="video/mp4">
 </video>
 </body>
