redirect full url

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data:; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
-    <meta http-equiv="refresh" content="0;URL=/TicTacToe/iFrameTest/iFrameTest.html">
+    <meta http-equiv="refresh" content="0;URL=https://konstantindinev.github.io/TicTacToe/iFrameTest/iFrameTest.html">
     <script src="jquery-3.1.1.min.js"></script>
     
     <style type="text/css">
